# python-template

./: .editorconfig  .envrc  .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: check.yml
scripts/: exemplo.sh
tests/: test_bom_dia.py
uget_exemplo/: __main__.py  bom_dia.py
